about us responsive

--- a/unicorn_website-master/about_us.html
+++ b/unicorn_website-master/about_us.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/countdown_animation.css">
     <link rel="stylesheet" href="./style/animation.css">
+    <link rel="stylesheet" href=".//css/responsive.css">
     <title>Main Machine</title>
 </head>
 
@@ -107,15 +108,15 @@
 
     <section class="aboutus">
         <div class="container">
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-6">
+            <div class="row  justify-content-center align-items-center">
+                <div class=" col-lg-6 col-sm-12 col-md-6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus magni aliquam similique obcaecati? Pariatur omnis excepturi dolorem fugiat, ab nihil aperiam suscipit neque numquam repudiandae illum ut doloremque esse quam velit
                         debitis odio tempore atque sint earum aspernatur voluptas. Fuga, optio. Recusandae cum dolores reiciendis nesciunt est doloribus doloremque libero?</p>
                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus magni aliquam similique obcaecati? Pariatur omnis excepturi dolorem fugiat, ab nihil aperiam suscipit neque numquam repudiandae illum ut doloremque esse quam velit
                         debitis odio tempore atque sint earum aspernatur voluptas. Fuga, optio. Recusandae cum dolores reiciendis nesciunt est doloribus doloremque libero?</p>
                     <button type="button"><a class="custombutton aboutssbtn" href="#">Contact Now</a></button>
                 </div>
-                <div class="col-md-6">
+                <div class=" col-lg-6 col-sm-12 col-md-6 col-md-6">
                     <img src="./images/about_us_map.png" class="aboutusimg" alt="">
                 </div>
 
@@ -129,7 +130,7 @@
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
                 <h2 class="text-center mb-5">Our Founders</h2>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-12 col-lg-3 ">
                     <div class="cardwrapperr text-left py-4 px-4">
                         <img src="./images/te1.jpg" alt="">
                         <h3 class="mb-2 mt-3">Vishwajit</h3>
@@ -137,7 +138,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic harum totam architecto porro excepturi vel.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class=" col-md-3 col-lg-3 ">
                     <div class="cardwrapperr text-left py-4 px-4">
                         <img src="./images/te2.jpg" alt="">
                         <h3 class="mb-2 mt-3">Sonali</h3>
@@ -145,7 +146,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic harum totam architecto porro excepturi vel.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class=" col-md-3 col-lg-3 ">
                     <div class="cardwrapperr text-left py-4 px-4">
                         <img src="./images/te1.jpg" alt="">
                         <h3 class="mb-2 mt-3">Vishwa</h3>
