--- a/unicorn_website-master/contact_us.html
+++ b/unicorn_website-master/contact_us.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/countdown_animation.css">
     <link rel="stylesheet" href="./style/animation.css">
+    <link rel="stylesheet" href=".//css/responsive.css">
     <title>Main Machine</title>
 </head>
 
