--- a/unicorn_website-master/contact_us.html
+++ b/unicorn_website-master/contact_us.html
@@ -32,9 +32,9 @@
                                     <img src="./images/white_logo.png" alt="Unicorn Logo">
                                 </a>
                             </div>
-                            <div class="contact-details">
+                            <!-- <div class="contact-details col-sm-3">
                                 <h3>Need help? Talk to an Expert<br><span>+91 987654321</span></h3>
-                            </div>
+                            </div> -->
                         </div>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -77,10 +77,10 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="call-login-button">
+                        <!-- <div class="call-login-button col-sm-5">
                             <button type="button" class="custom-button"><a href="http://unicorneequipment.blubrandzglobal.com/"><i class="far fa-user"></i></i></a></button>
                             <button type="button" class="request-button"><a href="http://unicorneequipment.blubrandzglobal.com/">Request a call</a></button>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
                 <!--navbar end-->
@@ -109,7 +109,7 @@
     <section class="contactdetails">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class=" col-md-4 ">
+                <div class=" col-md-4 col-lg-4  ">
                     <div class="cardwrapper ">
                         <img src="./style/image/main_banner_1.jpg " alt=" ">
                         <div class="cardaddress ">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 ">
+                <div class="col-md-8 col-lg-8 col-sm-12 map_content">
                     <div class="mapcontent ">
                         <h3 class="addressheading">Vikaspuri, Delhi</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.356837018893!2d77.08077131500805!3d28.58906998243498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1b41b7bf3f0f%3A0xaf4ab794d32d9f05!2sPalam!5e0!3m2!1sen!2sin!4v1645525396568!5m2!1sen!2sin "
@@ -155,7 +155,7 @@
     <section class="contactdetails1 contactdetails">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class=" col-md-4 ">
+                <div class=" col-md-4 col-lg-4 ">
                     <div class="cardwrapper ">
                         <img src="./style/image/main_banner_1.jpg " alt=" ">
                         <div class="cardaddress ">
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 ">
+                <div class="col-md-8 col-lg-8 map_content ">
                     <div class="mapcontent ">
                         <h3 class="addressheading">Vikaspuri, Delhi</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.356837018893!2d77.08077131500805!3d28.58906998243498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1b41b7bf3f0f%3A0xaf4ab794d32d9f05!2sPalam!5e0!3m2!1sen!2sin!4v1645525396568!5m2!1sen!2sin "
@@ -201,7 +201,7 @@
     <section class="contactdetails2 contactdetails">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class=" col-md-4 ">
+                <div class=" col-md-4 col-lg-4 ">
                     <div class="cardwrapper ">
                         <img src="./style/image/main_banner_1.jpg " alt=" ">
                         <div class="cardaddress ">
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 ">
+                <div class="col-md-8 col-lg-8 map_content ">
                     <div class="mapcontent ">
                         <h3 class="addressheading">Vikaspuri, Delhi</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.356837018893!2d77.08077131500805!3d28.58906998243498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1b41b7bf3f0f%3A0xaf4ab794d32d9f05!2sPalam!5e0!3m2!1sen!2sin!4v1645525396568!5m2!1sen!2sin "
