--- a/unicorn_website-master/index.html
+++ b/unicorn_website-master/index.html
@@ -845,11 +845,11 @@
 
             </div>
             <!-- follow us  -->
-            <div class="container-fluid follow-us border border-info">
+            <div class="container-fluid follow-us">
 
                 <div class="container p-5">
                     <div class="row">
-                        <div class="col-lg-7 border follow-icon text-center"><i class="fa-solid fa-envelope-open"></i>
+                        <div class="col-lg-7  follow-icon text-center"><i class="fa-solid fa-envelope-open"></i>
                             <i class="fa-solid fa-phone"></i>
                             <i class="fa-brands fa-instagram"></i>
                             <i class="fa-brands fa-whatsapp"></i>
