home page done full

--- a/unicorn_website-master/index.html
+++ b/unicorn_website-master/index.html
@@ -796,7 +796,7 @@
                     <h1 class="text-center">Consult With Us</h1>
                     <div class="row  py-3 ms-3">
                         <!-- email -->
-                        <div class="col-lg-3 border contact-box">
+                        <div class="col-lg-3 col-sm-6 border contact-box">
                             <i class="fa-solid fa-envelope-open"></i>
 
                             <p class="heading">info@butlerme.com</p>
@@ -804,7 +804,7 @@
                             <p>We reply within 24 hours</p>
 
                         </div>
-                        <div class="col-lg-3 border contact-box">
+                        <div class="col-lg-3 col-sm-6 border contact-box">
                             <i class="fa-solid fa-phone"></i>
 
                             <p class="heading">Have any questions?​</p>
@@ -849,7 +849,7 @@
 
                 <div class="container p-5">
                     <div class="row">
-                        <div class="col-lg-7  follow-icon text-center"><i class="fa-solid fa-envelope-open"></i>
+                        <div class="col-lg-7  col-sm-12 follow-icon text-center"><i class="fa-solid fa-envelope-open"></i>
                             <i class="fa-solid fa-phone"></i>
                             <i class="fa-brands fa-instagram"></i>
                             <i class="fa-brands fa-whatsapp"></i>
