--- a/unicorn_website-master/index.html
+++ b/unicorn_website-master/index.html
@@ -44,33 +44,33 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="about_us.html">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="machine-details.html" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Equipment
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="main_machine.html">main_machine</a></li>
+                                <li><a class="dropdown-item" href="sub_machine.html">main_machine</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="parts_services.html">parts_services</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Pricing</a>
+                            <a class="nav-link" href="./contact_us.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">News</a>
+                            <a class="nav-link" href="">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Contact</a>
+                            <a class="nav-link" href="">Pricinng</a>
                         </li>  
                     </ul>
                     <form class="d-flex">
